# grspc

./: .gitignore  Makefile
client/: Cargo.toml  build.rs
client/src/: main.rs
protos/: hello.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
