[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
prost = "0.11.6"
tonic = "0.8.3"
tokio = { version = "1", features = ["full"] }  # for our async runtime
redis = { version = "0.22.3", features = ["tokio-comp"] }

[build-dependencies]
tonic-build = "0.8.4"
